--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="col-lg-6">
                 <div class="mb-4"><img class="w-100" src="Images/1.png" alt=""></div>
                 <div class="button-group mb-4">
-                  <a class="button1" href="#">Claim now</a>
+                  <a class="button1" href="https://smrturl.co/o/599460/53177516?s1=">Claim now</a>
                   <div class="fs-5 text-white note"><p>No human verification required</p></div>
                 </div>
                 <p class="text-white">Cash App is a financial services platform, not a bank. Banking services are provided by Cash App’s bank partner(s). Prepaid debit cards issued by Sutton Bank. Brokerage services by Cash App Investing LLC, member</p>
